--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
           <div class="card" style="display:flex;justify-content:space-between;align-items:center">
             <div>
               <div style="font-size:13px;color:var(--muted)">Starting price</div>
-              <div style="font-weight:700;font-size:18px">₹999 / session</div>
+              <div style="font-weight:700;font-size:18px">₹999999 / session</div>
             </div>
             <div style="text-align:right">
               <div style="font-size:12px;color:var(--muted)">Open</div>
@@ -403,7 +403,7 @@
           </div>
           <div class="item"
             style="background-image:url('https://images.unsplash.com/photo-1519710164239-da123dc03ef4?q=80&w=1200&auto=format&fit=crop');">
-            <div class="meta">Treatment Room</div>
+            <div class="meta">Treatment Rooms</div>
           </div>
           <div class="item"
             style="background-image:url('https://images.unsplash.com/photo-1501004318641-b39e6451bec6?q=80&w=1200&auto=format&fit=crop');">
