--- a/index.html
+++ b/index.html
@@ -1,278 +1,1 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Serenity — Spa & Wellness Portfolio</title>
-  <meta name="description" content="Serenity — Minimal spa portfolio single page. Clean, responsive, and easy to customize." />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;800&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    :root{
-      --bg: #0f1724;
-      --card: rgba(255,255,255,0.06);
-      --muted: rgba(255,255,255,0.7);
-      --accent1: #86efac; /* soft green */
-      --accent2: #7dd3fc; /* soft cyan */
-      --glass: rgba(255,255,255,0.04);
-      --radius: 14px;
-      --maxwidth: 1100px;
-      --fw-heading: 700;
-    }
-
-    *{box-sizing:border-box}
-    html,body{height:100%;margin:0;font-family:Montserrat,system-ui,Segoe UI,Arial;color:whitesmoke;background:linear-gradient(180deg,#021018 0%, #08131b 100%);-webkit-font-smoothing:antialiased}
-
-    a{color:inherit;text-decoration:none}
-
-    .wrap{max-width:var(--maxwidth);margin:48px auto;padding:28px;border-radius:20px;background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));box-shadow:0 10px 30px rgba(2,6,23,0.6);}
-
-    header{display:flex;align-items:center;justify-content:space-between;gap:20px}
-    .brand{display:flex;gap:12px;align-items:center}
-    .logo{width:56px;height:56px;border-radius:12px;background:linear-gradient(135deg,var(--accent1),var(--accent2));display:grid;place-items:center;font-weight:800;color:#07211d;font-family:Playfair Display,serif}
-    .brand h1{font-size:18px;margin:0}
-    .brand p{margin:0;font-size:13px;color:var(--muted)}
-
-    nav{display:flex;gap:14px}
-    nav a{padding:8px 12px;border-radius:10px;font-size:14px;color:var(--muted)}
-    nav a:hover{background:var(--glass);color:var(--accent2)}
-
-    .hero{display:grid;grid-template-columns:1fr 420px;gap:28px;align-items:center;margin-top:28px}
-    .hero-left h2{font-family:Playfair Display,serif;font-size:38px;margin:0 0 10px;color: #e9fbf4}
-    .lead{color:var(--muted);line-height:1.6;margin-bottom:18px}
-    .cta{display:flex;gap:12px}
-    .btn{padding:10px 16px;border-radius:12px;font-weight:600;border:0;cursor:pointer}
-    .btn-primary{background:linear-gradient(90deg,var(--accent1),var(--accent2));color:#05231f}
-    .btn-ghost{background:transparent;border:1px solid rgba(255,255,255,0.06);color:var(--muted)}
-
-    .card{background:var(--card);padding:18px;border-radius:var(--radius);backdrop-filter:blur(6px)}
-
-    .services{display:flex;gap:14px;margin-top:20px}
-    .service{flex:1;padding:14px;border-radius:12px;background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));}
-    .service h4{margin:0 0 8px}
-
-    .hero-right{display:flex;flex-direction:column;gap:12px}
-    .cover{height:320px;border-radius:12px;background-image:url('https://images.unsplash.com/photo-1543785734-4d3e2f3c0f1d?q=80&w=1400&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder');background-size:cover;background-position:center;position:relative;overflow:hidden}
-    .cover::after{content:'';position:absolute;inset:0;background:linear-gradient(180deg, rgba(2,10,10,0.05), rgba(0,0,0,0.3))}
-
-    section.portfolio{margin-top:36px}
-    .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:12px}
-    .grid .item{height:140px;border-radius:12px;background-size:cover;background-position:center;position:relative;overflow:hidden}
-    .meta{position:absolute;left:12px;bottom:12px;background:linear-gradient(90deg, rgba(0,0,0,0.45), rgba(0,0,0,0.2));padding:8px 10px;border-radius:8px;font-size:13px}
-
-    .about{display:grid;grid-template-columns:2fr 1fr;gap:18px;margin-top:28px}
-
-    footer{margin-top:34px;display:flex;justify-content:space-between;align-items:center;color:var(--muted);font-size:14px}
-
-    /* Responsive */
-    @media (max-width:980px){
-      .hero{grid-template-columns:1fr;}
-      .grid{grid-template-columns:repeat(2,1fr)}
-      .about{grid-template-columns:1fr}
-      .cover{height:260px}
-    }
-    @media (max-width:560px){
-      .grid{grid-template-columns:1fr}
-      header{flex-direction:column;align-items:flex-start;gap:16px}
-      .brand h1{font-size:16px}
-      .hero-left h2{font-size:28px}
-    }
-
-    /* micro-interactions */
-    .item:hover{transform:scale(1.03);transition:transform .28s}
-    .btn{transition:transform .12s ease, box-shadow .12s}
-    .btn:active{transform:translateY(2px)}
-
-    .floating-sprinkle{position:absolute;right:-40px;top: -40px;opacity:0.12;width:280px;height:280px;border-radius:50%;background:radial-gradient(circle at 30% 30%, var(--accent1), transparent 30%), radial-gradient(circle at 70% 70%, var(--accent2), transparent 30%)}
-
-    /* simple smooth scroll behavior */
-    html{scroll-behavior:smooth}
-  </style>
-</head>
-<body>
-  <div class="wrap" role="main">
-    <header>
-      <div class="brand">
-        <div class="logo">S</div>
-        <div>
-          <h1>Serenity Spa</h1>
-          <p>Holistic wellness & signature therapies</p>
-        </div>
-      </div>
-
-      <nav aria-label="Primary">
-        <a href="#services">Services</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-      </nav>
-    </header>
-
-    <main>
-      <div class="hero">
-        <div class="hero-left">
-          <h2>Relax. Restore. Rebalance.</h2>
-          <p class="lead">I design calming spa experiences — from signature massages to aromatherapy rituals. Clean, natural, and crafted for peace.</p>
-
-          <div class="card">
-            <div style="display:flex;justify-content:space-between;align-items:center">
-              <div>
-                <strong>Signature</strong>
-                <div style="font-size:13px;color:var(--muted)">Hot stone + Aromatherapy (60 - 90 mins)</div>
-              </div>
-              <div>
-                <button class="btn btn-primary" onclick="document.getElementById('contact').scrollIntoView()">Book a Session</button>
-              </div>
-            </div>
-            <div class="services" style="margin-top:12px">
-              <div class="service"><h4>Therapeutic Massage</h4><div class="muted">Deep relaxation & muscle relief</div></div>
-              <div class="service"><h4>Facials</h4><div class="muted">Glow-focused natural treatments</div></div>
-              <div class="service"><h4>Wellness Plans</h4><div class="muted">Tailored monthly rituals</div></div>
-            </div>
-          </div>
-
-        </div>
-
-        <aside class="hero-right">
-          <div class="cover card" aria-hidden="true">
-            <div class="floating-sprinkle" aria-hidden="true"></div>
-          </div>
-
-          <div class="card" style="display:flex;justify-content:space-between;align-items:center">
-            <div>
-              <div style="font-size:13px;color:var(--muted)">Starting price</div>
-              <div style="font-weight:700;font-size:18px">₹999 / session</div>
-            </div>
-            <div style="text-align:right">
-              <div style="font-size:12px;color:var(--muted)">Open</div>
-              <div style="font-weight:600">Mon — Sat</div>
-            </div>
-          </div>
-        </aside>
-      </div>
-
-      <section id="portfolio" class="portfolio">
-        <h3 style="margin:0 0 12px;font-family:Playfair Display,serif;font-size:22px">Portfolio — signature spaces & experiences</h3>
-        <div class="grid">
-          <div class="item" style="background-image:url('https://images.unsplash.com/photo-1505751172876-fa1923c5c528?q=80&w=1200&auto=format&fit=crop');"><div class="meta">Relaxation Lounge</div></div>
-          <div class="item" style="background-image:url('https://images.unsplash.com/photo-1544213456-bc9f2b2c3e5b?q=80&w=1200&auto=format&fit=crop');"><div class="meta">Aromatherapy Bar</div></div>
-          <div class="item" style="background-image:url('https://images.unsplash.com/photo-1519710164239-da123dc03ef4?q=80&w=1200&auto=format&fit=crop');"><div class="meta">Treatment Room</div></div>
-          <div class="item" style="background-image:url('https://images.unsplash.com/photo-1501004318641-b39e6451bec6?q=80&w=1200&auto=format&fit=crop');"><div class="meta">Herbal Packs</div></div>
-          <div class="item" style="background-image:url('https://images.unsplash.com/photo-1504215680853-026ed2a45def?q=80&w=1200&auto=format&fit=crop');"><div class="meta">Stone Therapy</div></div>
-          <div class="item" style="background-image:url('https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?q=80&w=1200&auto=format&fit=crop');"><div class="meta">Facial Suite</div></div>
-        </div>
-      </section>
-
-      <section id="about" class="about">
-        <div>
-          <h3 style="font-family:Playfair Display,serif;margin-top:0">About — the experience</h3>
-          <p style="color:var(--muted);line-height:1.7">With a background in holistic therapies and a passion for minimalist design, I create restful spaces that let people breathe. Every detail — scent profile, lighting, and touch — is designed to calm the nervous system and restore balance.</p>
-
-          <div style="display:flex;gap:12px;margin-top:14px">
-            <div class="card" style="flex:1">
-              <h4 style="margin:0">Approach</h4>
-              <p style="margin:8px 0;color:var(--muted)">Personalised, research-backed, sustainable products.</p>
-            </div>
-            <div class="card" style="flex:1">
-              <h4 style="margin:0">Certifications</h4>
-              <p style="margin:8px 0;color:var(--muted)">Aromatherapy • Hot Stone • Ayurvedic basics</p>
-            </div>
-          </div>
-        </div>
-
-        <aside>
-          <div class="card">
-            <h4 style="margin:0">Quick Facts</h4>
-            <ul style="margin:8px 0 0 16px;color:var(--muted)">
-              <li>10+ curated treatments</li>
-              <li>1500+ happy clients</li>
-              <li>Mobile treatments available</li>
-            </ul>
-          </div>
-
-          <div style="height:12px"></div>
-
-          <div class="card">
-            <h4 style="margin:0">Testimonials</h4>
-            <p style="margin:8px 0;color:var(--muted);font-size:14px">“A calming, beautiful ritual — I left lighter and more rested.” — Asha</p>
-          </div>
-        </aside>
-      </section>
-
-      <section id="contact" style="margin-top:28px">
-        <h3 style="font-family:Playfair Display,serif;margin:0 0 12px">Contact</h3>
-        <div class="card" style="display:grid;grid-template-columns:1fr 320px;gap:18px">
-          <form onsubmit="event.preventDefault();submitForm()" style="display:flex;flex-direction:column;gap:10px">
-            <input required name="name" placeholder="Your name" style="padding:12px;border-radius:10px;border:0;background:rgba(255,255,255,0.03);color:inherit" />
-            <input required name="email" type="email" placeholder="Email" style="padding:12px;border-radius:10px;border:0;background:rgba(255,255,255,0.03);color:inherit" />
-            <textarea required name="message" placeholder="Tell me about your event or booking" rows="4" style="padding:12px;border-radius:10px;border:0;background:rgba(255,255,255,0.03);color:inherit"></textarea>
-            <div style="display:flex;gap:8px;align-items:center">
-              <button class="btn btn-primary" type="submit">Send message</button>
-              <button class="btn btn-ghost" type="button" onclick="location.href='mailto:hello@serenityspa.example?subject=Booking%20enquiry'">Email</button>
-            </div>
-            <div id="note" style="color:var(--muted);font-size:13px"></div>
-          </form>
-
-          <div style="display:flex;flex-direction:column;gap:12px">
-            <div class="card">
-              <strong>Location</strong>
-              <div style="color:var(--muted);font-size:14px;margin-top:6px">Dhalavaipuram / Chennai area — on-call treatments available</div>
-            </div>
-
-            <div class="card">
-              <strong>Hours</strong>
-              <div style="color:var(--muted);font-size:14px;margin-top:6px">Mon — Sat, 9:30 AM — 7:00 PM</div>
-            </div>
-
-            <div class="card" style="text-align:center">
-              <div style="font-size:12px;color:var(--muted)">Follow</div>
-              <div style="margin-top:8px;display:flex;justify-content:center;gap:10px">
-                <!-- simple SVG icons -->
-                <a aria-label="Instagram" href="#" title="Instagram">
-                  <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="3" y="3" width="18" height="18" rx="5" stroke="currentColor" stroke-opacity="0.8" stroke-width="1.5"/><circle cx="12" cy="12" r="3.2" stroke="currentColor" stroke-opacity="0.8" stroke-width="1.5"/><circle cx="17.6" cy="6.4" r="0.6" fill="currentColor" opacity="0.9"/></svg>
-                </a>
-                <a aria-label="Facebook" href="#" title="Facebook">
-                  <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M18 2h-3a4 4 0 0 0-4 4v2H8v3h3v7h3v-7h2.5l.5-3H14V6a1 1 0 0 1 1-1h3V2z" stroke="currentColor" stroke-opacity="0.9" stroke-width="1.2" fill="none"/></svg>
-                </a>
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </section>
-
-      <footer>
-        <div>© <span id="year"></span> Serenity Spa — Designed by <strong>Your Name</strong></div>
-        <div style="font-size:13px;color:var(--muted)">Made with care • Minimal & responsive</div>
-      </footer>
-
-    </main>
-  </div>
-
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-
-    function submitForm(){
-      const note = document.getElementById('note');
-      note.textContent = 'Thanks — your message looks great! (This demo doesn\'t send messages. Replace submitForm() with your backend or use Formspree.)';
-      // simple UI feedback
-      setTimeout(()=>note.textContent='Message saved locally — implement real backend to receive messages.',3500);
-    }
-
-    // Small accessibility improvement: focus outlines on keyboard nav
-    document.body.addEventListener('keyup', (e)=>{
-      if(e.key === 'Tab') document.body.classList.add('show-focus');
-    });
-  </script>
-
-  <!--
-    How to customize quickly:
-    1. Replace the logo letter 'S' with your SVG or image inside .logo.
-    2. Swap Unsplash background URLs with your own portfolio images.
-    3. Replace contact mailto in the Email button.
-    4. To make the contact form live, connect to Formspree, Netlify Forms, or your server.
-    5. Change colors in :root to match your brand.
-  -->
-</body>
-</html>
+<h1>Hello World</h1>
