Change title to 'Serenity'

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Serenity — Spa & Wellness Portfolio</title>
+  <title>Serenity</title>
   <meta name="description"
     content="Serenity — Minimal spa portfolio single page. Clean, responsive, and easy to customize." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
